started on variance calculation demo

--- a/index.html
+++ b/index.html
@@ -16,18 +16,20 @@
 			
 			var s = Snap();
 			
-			var data = "1110010101001100101011101100000";
+			var data = "11100101001011001101000";
 			
 			var x = 0.5;
 			var y = 100;
+			var ystep = 75;
 			
 			function traverse (x, y, tree, size) {
 				x = x || 0.5;
 				y = y || 100;
 				
-				if (tree.length < 1) {
+				if (tree==undefined || tree.length < 1) {
 					return;
 				}
+
 				var n = parseInt(tree.substr(0,1));
 				var _tree = tree.substr(1);
 				if (!n) {
@@ -37,32 +39,15 @@
 					return _tree;
 				} else {
 					s.circle(x*100+"%", y, 5).attr({fill:"#ad9aff"});
-					s.line(x*100+"%", y, (x - (x/size)) * 100 +"%", y+50 ).attr({stroke:"#fff"});
-					s.line(x*100+"%", y, (x + (x/size)) * 100 +"%", y+50 ).attr({stroke:"#fff"});
-					var remainder = traverse(x - (x/size), y + 50, _tree, size*1.4)
-					remainder = traverse(x + (x/size), y+50, remainder, size*2.1);
+					s.line(x*100+"%", y, (x - (x/size)) * 100 +"%", y+ystep ).attr({stroke:"#fff"});
+					s.line(x*100+"%", y, (x + (x/size)) * 100 +"%", y+ystep ).attr({stroke:"#fff"});
+					var remainder = traverse(x - (x/size), y + ystep, _tree, size*1.4)
+					remainder = traverse(x + (x/size), y+ystep, remainder, size*2.1);
 					return remainder;
 				}
 			}
 			
 			traverse( 0.5, 100, data, 3);
-			
-			
-			var image = s.image("http://upload.wikimedia.org/wikipedia/commons/5/57/Heightmap.png", 100, 600, 257, 257);
-			
-			var _left = 100, _top = 600, lod = 12;
-			var num_verts = (2*lod) + 1;
-			var step = 257 / num_verts;
-			for (var x=_left; x <= _left+257; x+=step  ) {
-				for (var y=_top; y <= _top+257; y+=step ) {
-					console.log(y);
-					s.circle(x, y, 1).attr({fill:"#f00"});
-				}
-			}
-			
-			
-			
-			
 			
 			
 			
