stopped the spinning

--- a/variance.html
+++ b/variance.html
@@ -80,7 +80,7 @@
 				
 				three.on('update', function () {
 					var t = three.Time.now;
-				  three.camera.position.set(Math.cos(t)*100, 100, Math.sin(t)*100);
+				  three.camera.position.set(300, 200, 300);
 				  three.camera.lookAt(new THREE.Vector3());
 				});
 				
