--- a/variance.html
+++ b/variance.html
@@ -237,15 +237,20 @@
 				//triB.split();
 
 				/*
-					0  1  2  3  4
+					20  21  22  23  24
 
-					5  6  7  8  9
+					15  16  17  18  19
 
-					10 11 12 13 14
+					10  11  12  13  14
 
-					15 16 17 18 19
-					
-					20 21 22 23 24
+					5   6   7   8   9
+
+				+z	0   1   2   3   4
+				^
+				|
+					-> +x
+				
+				Is this right ?
 
 
 				*/
