--- a/triangle-tree-demo.html
+++ b/triangle-tree-demo.html
@@ -143,7 +143,7 @@
 						$('#bintree').val(bs);
 						
 						patch.buildSplits(bs);
-						patch.buildGeometry(context, new THREE.MeshNormalMaterial());
+						patch.buildGeometry(context, new THREE.MeshNormalMaterial({wireframe:true}));
 						three.scene.add(patch.object);
 					}
 					
